Mejoras de responsividad, Swiper, y estilos de texto con clamp2

--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
             
             <div class="swiper-slide">
                 <div class="pagina-2">
-                    <h2>Sony NEX 5N</h2>
+                    <h2>Cámara digital EOS 5D Mark II</h2>
                     <ul class="proyectos-lista">
                         <li>
-                            <img src="Image/imagenes 23R98/Sony_NEX-5N-removebg-preview.png" alt="Imagen del proyecto 1" class="proyecto-imagen">
+                            <img src="Image/imagenes 23R98/71neTTcmTLL-removebg-preview.png" alt="Imagen del proyecto 1" class="proyecto-imagen">
                             <div class="proyecto-texto">
                                 <h2></h2>
-                                <p>Cámara mirrorless compacta con lentes intercambiables que marcó un hito en su época por combinar portabilidad con calidad de imagen tipo DSLR.</p>
+                                <p>La Canon 5D destaca con ISOs altos. No solo ofrece una imagen nítida, sino que, lo que es más importante, es más nítida, ya que no necesita aplicar tanta nitidez ni reducción de ruido que afecta la textura.</p>
                             </div>
                         </li>
                     </ul>
